--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div class="container">
     <div class="sidebar">
-      <button id="compose-btn">Compose</button>
+      <button id="compose-btn">+</button>
       <h3>Inbox</h3>
       <ul id="inbox">
         <!-- Emails will be listed here -->
